force-app/main/default/objects/clariti__Refund__c/clariti__Refund__c.object-meta.xml
<CustomObject>
    <description>The Refund allows you to specify, collect and keep track of money refunded.</description>
    <label>Refund</label>
    <nameField>
        <displayFormat>RF-{MM}{DD}{YYYY}-{000}</displayFormat>
        <label>Refund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>