force-app/main/default/objects/clariti__Refund__c/fields/clariti__Amount__c.field-meta.xml
<CustomField>
    <fullName>clariti__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>