force-app/main/default/objects/clariti__Refund__c/fields/clariti__CheckNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__CheckNumber__c</fullName>
    <label>Check Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>