force-app/main/default/objects/clariti__Refund__c/fields/clariti__FailureReason__c.field-meta.xml
<CustomField>
    <fullName>clariti__FailureReason__c</fullName>
    <label>Failure Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>