force-app/main/default/objects/clariti__Refund__c/fields/clariti__Payment__c.field-meta.xml
<CustomField>
    <fullName>clariti__Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>clariti__Payment__c</referenceTo>
    <relationshipLabel>Refund</relationshipLabel>
    <relationshipName>Refund</relationshipName>
    <type>Lookup</type>
</CustomField>