force-app/main/default/objects/clariti__Refund__c/fields/clariti__RefundMethod__c.field-meta.xml
<CustomField>
    <fullName>clariti__RefundMethod__c</fullName>
    <description>Populated with the payment method on refund transaction</description>
    <label>Refund Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>