force-app/main/default/objects/clariti__Refund__c/fields/clariti__RefundNotes__c.field-meta.xml
<CustomField>
    <fullName>clariti__RefundNotes__c</fullName>
    <label>Refund Notes</label>
    <type>TextArea</type>
</CustomField>